--- a/res/css/views/settings/tabs/_SettingsSection.pcss
+++ b/res/css/views/settings/tabs/_SettingsSection.pcss
@@ -28,7 +28,7 @@ limitations under the License.
 
 .mx_SettingsSection_subSections {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-gap: $spacing-32;
 
     padding: $spacing-16 0;
